# zooblinkofon

./: README.md
apps/colorfade/: colorfade.py
apps/colorpicker/: colorpicker
apps/hauptsache_strobo/: hauptsache_strobo.py
apps/police/: police.py
cad/rack/: rack_base_clean.dxf
firmware/: .gitignore  Makefile.am  audio.cc  audio.h  audio_mixer.cc  audio_mixer.h  autogen.sh  configure.ac  display.cc  display.h  firmware.cc  input.cc  input.h  leds.cc  leds.h  monitor.cc  monitor.h  scene.cc  scene.h  scene_farm.cc  scene_farm.h  scene_water.cc  scene_water.h  setup_gpio.sh  zbf-firmware.service  zooblinkofon.cc  zooblinkofon.service
firmware/controller/: Makefile  firmware.cc  fuses.txt  led_controller.cc  led_controller.h  protocol.cc  protocol.h  protocol.md  serial.cc  serial.h  test.py
firmware/led_driver/: Makefile  driver.cc  driver.h  firmware.cc  fuses.txt  led_driver.cc  led_driver.h  serial.cc  serial.h  test.py
firmware/old/colorpicker/: colorpicker
firmware/old/hauptsache_strobo/: hauptsache_strobo.py
firmware/old/machine_to_machine/: start_m2m.sh
hardware/: button_driver.fzz  top_plate.slvs
hardware/rack/: rack_base.slvs
pcb/: button_driver.fzz
rack/: rack_base.dxf  rack_base.ngc  rack_base.slvs  rack_base.step  rack_base_clean_marked.dxf
